# duckdb-extension-fluss-lake

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_PAIMON.md  TEST_RESULTS.md  build.sh  community_email.md  extension_config.cmake  test_fluss.sh  test_fluss.sql  test_paimon.sh  test_paimon.sql
docs/: QUICKSTART_PAIMON.md
rust-ffi/: Cargo.toml
rust-ffi/src/: fluss_ffi.rs  lib.rs  paimon_ffi.rs
src/: fluss_extension.cpp  paimon_extension.cpp
src/include/: fluss_extension.hpp  fluss_ffi.h  paimon_extension.hpp  paimon_ffi.h
test/: README.md
test/sql/: fluss.test  paimon.test
