[package]
name = "fluss-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "fluss_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
paimon = { git = "https://github.com/luoyuxia/paimon-rust", branch = "poc" }
fluss = { git = "https://github.com/apache/fluss-rust.git", branch = "allow-batch-poll" }
tokio = { version = "1.39", features = ["full"] }
arrow = { version = "57.0.0", features = ["ffi"] }
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true

